--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "next": "12.1.5",
     "react": "18.0.0",
     "react-dom": "18.0.0",
+    "sass": "^1.32.8",
+    "react-icons": "^4.2.0",
     "swiper": "^8.1.1"
   },
   "devDependencies": {
